--- a/rollup/core/classes/RollupLimits.cls
+++ b/rollup/core/classes/RollupLimits.cls
@@ -12,11 +12,18 @@ public without sharing class RollupLimits {
 
   private static final Boolean HAS_EXCEEDED_ORG_ASYNC_JOB_LIMIT {
     get {
-      if (HAS_EXCEEDED_ORG_ASYNC_JOB_LIMIT == null) {
-        System.OrgLimit asyncJobLimit = OrgLimits.getMap().get('DailyAsyncApexExecutions');
-        Integer countOfJobsUsed = orgAsyncJobsUsed != null ? orgAsyncJobsUsed : asyncJobLimit.getValue();
-        HAS_EXCEEDED_ORG_ASYNC_JOB_LIMIT = countOfJobsUsed - asyncJobLimit.getLimit() > 0;
+      Integer countOfJobsUsed = 0;
+      Integer asyncJobLimit = 250000;
+      // at the moment, packaging orgs run tests synchronously, which produces an error when fetching System.OrgLimits.getMap()
+      // this is a workaround until it's safe to access OrgLimits from a synchronously running test
+      if (HAS_EXCEEDED_ORG_ASYNC_JOB_LIMIT == null && Test.isRunningTest() == false) {
+        System.OrgLimit asyncLimit = System.OrgLimits.getMap().get('DailyAsyncApexExecutions');
+        asyncJobLimit = asyncLimit.getLimit();
+        countOfJobsUsed = asyncLimit.getValue();
+      } else if (HAS_EXCEEDED_ORG_ASYNC_JOB_LIMIT == null && orgAsyncJobsUsed != null) {
+        countOfJobsUsed = orgAsyncJobsUsed;
       }
+      HAS_EXCEEDED_ORG_ASYNC_JOB_LIMIT = countOfJobsUsed - asyncJobLimit > 0;
       return HAS_EXCEEDED_ORG_ASYNC_JOB_LIMIT;
     }
     set;
