Removed initialization for new String lists in String.join calls where appropriate now that Set<String> implements Iterable<String>. Updated RollupLimits now that Summer '23 release has successfully patched a packaging issue where referencing System.OrgLimits in a synchronous test run could lead to gacking

--- a/extra-tests/classes/RollupTestUtils.cls
+++ b/extra-tests/classes/RollupTestUtils.cls
@@ -105,7 +105,7 @@ public class RollupTestUtils {
       fieldNames.add(currencyIscoCodeFieldName);
     }
     String whereClause = recordId == null ? '' : '\nWHERE Id = :recordId';
-    String recordQuery = 'SELECT ' + String.join(new List<String>(fieldNames), ', ') + '\nFROM ' + fromObject + whereClause;
+    String recordQuery = 'SELECT ' + String.join(fieldNames, ', ') + '\nFROM ' + fromObject + whereClause;
     return Database.query(recordQuery);
   }
 }
