Finishing fix for one-to-many grandparent rollups not always retrieving descendant children for full recalc-based rollups

--- a/extra-tests/classes/RollupRelationshipFieldFinderTests.cls
+++ b/extra-tests/classes/RollupRelationshipFieldFinderTests.cls
@@ -552,7 +552,7 @@ private class RollupRelationshipFieldFinderTests {
   @IsTest
   static void correctlyReferencesOneToManyAdjacentRecords() {
     Account acc = [SELECT Id FROM Account];
-    Account secondAccount = new Account(Name = 'Two');
+    Account secondAccount = new Account(Name = 'Two', AnnualRevenue = 50);
     Individual firstParent = new Individual(LastName = 'One');
     insert new List<SObject>{ firstParent, secondAccount };
     Contact firstChild = new Contact(AccountId = acc.Id, LastName = 'Child One', IndividualId = firstParent.Id);
@@ -562,10 +562,11 @@ private class RollupRelationshipFieldFinderTests {
     RollupRelationshipFieldFinder finder = new RollupRelationshipFieldFinder(
       control,
       new Rollup__mdt(
+        RollupFieldOnCalcItem__c = 'AnnualRevenue',
         LookupFieldOnCalcItem__c = 'Id',
         GrandparentRelationshipFieldPath__c = 'Contacts.Individual.Name',
         OneToManyGrandparentFields__c = 'Contact.AccountId',
-        IsFullRecordSet__c = true,
+        IsFullRecordSet__c = true, // this flag being true should make the adjacent children also be fetched
         LookupFieldOnLookupObject__c = 'Id'
       ),
       uniqueFieldNames,
@@ -576,36 +577,14 @@ private class RollupRelationshipFieldFinderTests {
     RollupRelationshipFieldFinder.Traversal traversal = finder.getParents(new List<Account>{ acc });
 
     System.assertEquals(true, traversal.getIsFinished());
-    System.assertEquals(true, traversal.getParentLookupToRecords().containsKey('' + secondAccount.Id), traversal.getParentLookupToRecords());
-    /**
-     *
-      WARN|Rollup v1.5.75-beta: error retrieving additional grandparent records
-      Didn't understand relationship 'OneToMany__r' in field path.
-      Inner stacktrace: Class.RollupRepository.get: line 50, column 1
-      Class.RollupRelationshipFieldFinder.getAdditionalCalcItems: line 642, column 1
-      Class.RollupRelationshipFieldFinder.retrieveGrandparentAdjacentChildren: line 602, column 1
-      Class.RollupRelationshipFieldFinder.retrieveAdditionalHierarchyRecords: line 548, column 1
-      Class.RollupRelationshipFieldFinder.getParents: line 213, column 1
-      Class.RollupRelationshipFieldFinder.recurseThroughObjectChain: line 394, column 1
-      Class.RollupRelationshipFieldFinder.getParents: line 217, column 1
-      Class.RollupAsyncProcessor.getCalcItemsByLookupField: line 832, column 1
-      Class.RollupAsyncProcessor.process: line 658, column 1
-      Class.RollupAsyncProcessor.performWork: line 345, column 1
-      Class.RollupAsyncProcessor.QueueableProcessor.execute: line 434, column 1
-
-      Rollup Metadata: {
-        "CalcItem__c" : "Child_Data__c",
-        "GrandparentRelationshipFieldPath__c" : "OneToMany__r.Parent__r.ParentMin__c",
-        "IsFullRecordSet__c" : true,
-        "LookupFieldOnCalcItem__c" : "Id",
-        "LookupFieldOnLookupObject__c" : "Id",
-        "LookupObject__c" : "Parent__c",
-        "OneToManyGrandparentFields__c" : "OneToMany__c.LookupBackToChild_Data__c",
-        "RollupFieldOnCalcItem__c" : "ChildMin__c",
-        "RollupFieldOnLookupObject__c" : "ParentMin__c",
-        "RollupOperation__c" : "MIN",
+    Boolean hasBothAccounts = false;
+    for (SObject calcItem : traversal.getParentLookupToRecords().get('' + firstParent.Id).getAll()) {
+      if (calcItem.Id == secondAccount.Id) {
+        System.assertEquals(secondAccount.AnnualRevenue, calcItem.get(Account.AnnualRevenue));
+        hasBothAccounts = true;
+        break;
       }
-     */
-    Assert.fail('TODO!');
+    }
+    System.assertEquals(true, hasBothAccounts, traversal.getParentLookupToRecords());
   }
 }
